syntax = "proto3";

import public "response_code.proto";

package submodule;

service Submodule {
  rpc Register (SubmoduleReq) returns (response_code.Resp) {}
  rpc Offline (SubmoduleReq) returns (response_code.Resp) {}
  rpc Heartbeat (SubmoduleReq) returns (response_code.Resp) {}
  rpc Update (SubmoduleReq) returns (response_code.Resp) {}
}

enum SubmoduleType {
  GRPC_TYPE = 0;
  PIPE_TYPE = 1;
  WINDOWS_NAMED_PIPE_TYPE = 2;
  HTTP_TYPE = 3;
}

enum ReceiveType {
  DEFAULT_TYPE = 0;
  JUST_INSTRUCT_TYPE = 1;
  JUST_MANIPULATE_TYPE = 2;
}

message SubmoduleReq {
  string name = 1;
  SubmoduleType submodule_type = 2;
  ReceiveType receive_type = 3;
  map<string, string> conn_params = 4;
  repeated string default_instruct = 5;
}
